# cwneural

./: CMakeLists.txt  vcpkg.json
models/: crnn_finetuned.onnx  crnn_finetuned.onnx.data
src/: cnn_classifier.cpp  dsp.cpp  hackrf_source.cpp  main.cpp  morse_decoder.cpp  tui.cpp
src/include/: cnn_classifier.hpp  dsp.hpp  hackrf_source.hpp  morse_decoder.hpp  tui.hpp
